--- a/src/styles/register.module.css
+++ b/src/styles/register.module.css
@@ -13,6 +13,7 @@
     /* border: solid red; */
     text-align: center;
     overflow: hidden;
+    z-index: -25;
     /* background-color: rgb(11, 19, 34); */
     scroll-behavior: unset;
 }
@@ -92,6 +93,7 @@
     background: none;
     text-align: left;
     width: 396px;
+    z-index: -25;
     border-radius: 8px;
     @media (max-width: 500px) {
         /* border: solid; */
@@ -118,6 +120,7 @@
     width: 396px;
     /* border: solid red; */
     border-radius: 8px;
+    z-index: -25;
     @media (max-width: 500px) {
         /* border: solid; */
         flex-grow: 1;
@@ -182,6 +185,7 @@
     /* border: solid red; */
     overflow: visible;
     position: relative;
+    z-index: -50;
     background: rgba(17, 26, 35, 1);
 }
 .bottomchain{
